RESOLVED FIXED 39520
Parse attributes with HTML5 lexer
https://bugs.webkit.org/show_bug.cgi?id=39520
Summary Parse attributes with HTML5 lexer
Adam Barth
Reported 2010-05-21 16:59:56 PDT
Parse attributes with HTML5 lexer
Attachments
Patch (9.49 KB, patch)
2010-05-21 17:01 PDT, Adam Barth
eric: review+
Adam Barth
Comment 1 2010-05-21 17:01:53 PDT
Eric Seidel (no email)
Comment 2 2010-05-21 17:06:51 PDT
Early Warning System Bot
Comment 3 2010-05-21 17:07:44 PDT
Eric Seidel (no email)
Comment 4 2010-05-21 17:09:25 PDT
Comment on attachment 56764 [details] Patch If you don't break the builds, sure, this looks fine.
Adam Barth
Comment 5 2010-05-21 17:10:14 PDT
../../../WebCore/html/HTML5Tokenizer.cpp:34:29: error: MappedAttribute.h: No such file or directory Looks like something changed in the tree since I last updated.
Adam Barth
Comment 6 2010-05-22 00:43:27 PDT
Note You need to log in before you can comment on or make changes to this bug.