WebCore/html/HTML5Lexer.cpp
@@ -685,12 +685,14 @@ bool HTML5Lexer::nextToken(SegmentedString& source, HTML5Token& token)
                 emitCurrentTagToken();
                 m_state = DataState;
             } else if (cc >= 'A' && cc <= 'Z') {
-                notImplemented();
+                m_token->addNewAttribute();
+                m_token->appendToAttributeName(toLowerCase(cc));
                 m_state = AttributeNameState;
             } else {
                 if (cc == '"' || cc == '\'' || cc == '<' || cc == '=')
                     emitParseError();
-                notImplemented();
+                m_token->addNewAttribute();
+                m_token->appendToAttributeName(cc);
                 m_state = AttributeNameState;
             }
             // FIXME: Handle EOF properly.
@@ -707,11 +709,11 @@ bool HTML5Lexer::nextToken(SegmentedString& source, HTML5Token& token)
                 emitCurrentTagToken();
                 m_state = DataState;
             } else if (cc >= 'A' && cc <= 'Z')
-                notImplemented();
+                m_token->appendToAttributeName(toLowerCase(cc));
             else {
                 if (cc == '"' || cc == '\'' || cc == '<' || cc == '=')
                     emitParseError();
-                notImplemented();
+                m_token->appendToAttributeName(cc);
                 m_state = AttributeNameState;
             }
             // FIXME: Handle EOF properly.
@@ -728,12 +730,14 @@ bool HTML5Lexer::nextToken(SegmentedString& source, HTML5Token& token)
                 emitCurrentTagToken();
                 m_state = DataState;
             } else if (cc >= 'A' && cc <= 'Z') {
-                notImplemented();
+                m_token->addNewAttribute();
+                m_token->appendToAttributeName(toLowerCase(cc));
                 m_state = AttributeNameState;
             } else {
                 if (cc == '"' || cc == '\'' || cc == '<')
                     emitParseError();
-                notImplemented();
+                m_token->addNewAttribute();
+                m_token->appendToAttributeName(cc);
                 m_state = AttributeNameState;
             }
             // FIXME: Handle EOF properly.
@@ -756,7 +760,7 @@ bool HTML5Lexer::nextToken(SegmentedString& source, HTML5Token& token)
             } else {
                 if (cc == '<' || cc == '=' || cc == '`')
                     emitParseError();
-                notImplemented();
+                m_token->appendToAttributeValue(cc);
                 m_state = AttributeValueUnquotedState;
             }
             break;
@@ -768,7 +772,7 @@ bool HTML5Lexer::nextToken(SegmentedString& source, HTML5Token& token)
                 m_state = CharacterReferenceInAttributeValueState;
                 m_additionalAllowedCharacter = '"';
             } else
-                notImplemented();
+                m_token->appendToAttributeValue(cc);
             // FIXME: Handle EOF properly.
             break;
         }
@@ -779,7 +783,7 @@ bool HTML5Lexer::nextToken(SegmentedString& source, HTML5Token& token)
                 m_state = CharacterReferenceInAttributeValueState;
                 m_additionalAllowedCharacter = '\'';
             } else
-                notImplemented();
+                m_token->appendToAttributeValue(cc);
             // FIXME: Handle EOF properly.
             break;
         }
@@ -795,7 +799,7 @@ bool HTML5Lexer::nextToken(SegmentedString& source, HTML5Token& token)
             } else {
                 if (cc == '"' || cc == '\'' || cc == '<' || cc == '=' || cc == '`')
                     emitParseError();
-                notImplemented();
+                m_token->appendToAttributeValue(cc);
             }
             // FIXME: Handle EOF properly.
             break;
