WebCore/html/HTML5Token.h
@@ -44,6 +44,14 @@ public:
         EndOfFile,
     };
 
+    class Attribute {
+    public:
+        WTF::Vector<UChar, 32> m_name;
+        WTF::Vector<UChar, 32> m_value;
+    };
+
+    typedef WTF::Vector<Attribute> AttributeList;
+
     HTML5Token() { clear(); }
 
     void clear() { m_type = Uninitialized; }
@@ -54,7 +62,7 @@ public:
         m_type = StartTag;
         m_data.clear();
         m_selfClosing = false;
-        m_attrs = 0;
+        m_currentAttribute = 0;
 
         m_data.append(character);
     }
@@ -65,7 +73,7 @@ public:
         m_type = EndTag;
         m_data.clear();
         m_selfClosing = false;
-        m_attrs = 0;
+        m_currentAttribute = 0;
 
         m_data.append(character);
     }
@@ -90,6 +98,25 @@ public:
         m_data.append(character);
     }
 
+    void addNewAttribute()
+    {
+        ASSERT(m_type == StartTag || m_type == EndTag);
+        m_attributes.grow(m_attributes.size() + 1);
+        m_currentAttribute = &m_attributes.last();
+    }
+
+    void appendToAttributeName(UChar character)
+    {
+        ASSERT(m_type == StartTag || m_type == EndTag);
+        m_currentAttribute->m_name.append(character);
+    }
+
+    void appendToAttributeValue(UChar character)
+    {
+        ASSERT(m_type == StartTag || m_type == EndTag);
+        m_currentAttribute->m_value.append(character);
+    }
+
     Type type() const { return m_type; }
 
     AtomicString name()
@@ -104,10 +131,10 @@ public:
         return m_selfClosing;
     }
 
-    NamedMappedAttrMap* attrs() const
+    AttributeList& attributes()
     {
         ASSERT(m_type == StartTag || m_type == EndTag);
-        return m_attrs.get();
+        return m_attributes;
     }
 
     String characters()
@@ -131,7 +158,10 @@ private:
 
     // For StartTag and EndTag
     bool m_selfClosing;
-    RefPtr<NamedMappedAttrMap> m_attrs;
+    AttributeList m_attributes; // Old tokenizer reserves 10.
+
+    // A pointer into m_attributes used during lexing.
+    Attribute* m_currentAttribute;
 };
 
 }
